Product subpage fixes

--- a/src/frontend/css/base/variables.styl
+++ b/src/frontend/css/base/variables.styl
@@ -56,6 +56,9 @@ $screen-lg =                  1250px;
 $screen-lg-min =              $screen-lg;
 $screen-lg-desktop =          $screen-lg-min;
 
+$screen-xl =                  1400px;
+$screen-xl-min =              $screen-xl;
+
 $screen-small-land-max =      'screen and (max-width: 500px)';
 $screen-xs-max =              'screen and (max-width: 767px)';    //($screen-sm-min - 1);
 $screen-sm-max =              'screen and (max-width: 1023px)';   //($screen-md-min - 1);
@@ -87,3 +90,4 @@ $container-md ?=               $container-desktop
 $container-large-desktop ?=    (970px + $grid-gutter-width)
 $container-lg ?=               $container-large-desktop
 
+$container-xl ?=               (1200px + $grid-gutter-width)
