--- a/src/frontend/css/trumps/grid.styl
+++ b/src/frontend/css/trumps/grid.styl
@@ -116,6 +116,8 @@ make-lg-column-pull($columns)
 		max-width $container-md
 	@media (min-width $screen-lg-min)
 		max-width $container-lg
+	@media (min-width $screen-xl-min)
+		max-width $container-xl
 
 
 // Fluid container
