--- a/src/frontend/css/sections/about-us.styl
+++ b/src/frontend/css/sections/about-us.styl
@@ -1,30 +1,31 @@
 .about-us
-  width 100%
-  background-color $color-about-us-bg
+	width 100%
+	background-size cover
+	background-position 10% 0
+	background-color $color-about-us-bg
+	padding-top 70px
+	padding-bottom 84px
 
-  .container
-    min-height 435px
-    background-size cover
-    background-position 10% 0
-    align-items center
-    padding-top 70px
-    padding-bottom 84px
+	.container
+		min-height 435px
+		align-items center
 
-  &__title
-    font-weight $weight-bold
-    font-size 58px
-    color white
-    margin-top 0
-    margin-bottom 20px
+	&__title
+		font-weight $weight-bold
+		font-size 58px
+		color white
+		margin-top 0
+		margin-bottom 20px
 
-  &__article
-    max-width 771px
-    width 100%
-    font-weight $weight-light
-    font-size 15px
-    color white
-    line-height 28px
-    text-align center
+	&__article
+		max-width 771px
+		width 100%
+		font-weight $weight-light
+		font-size 15px
+		color white
+		line-height 28px
+		text-align center
+		margin 0 auto
 
-    @media $screen-sm-max
-      padding 0 15px
+		@media $screen-sm-max
+			padding 0 15px
