--- a/src/frontend/css/sections/contact.styl
+++ b/src/frontend/css/sections/contact.styl
@@ -1,96 +1,104 @@
 .contact
-  width 100%
-  background-color $color-bg-contact
-  font-weight $weight-light
-  position relative
+	width 100%
+	background-color $color-bg-contact
+	font-weight $weight-light
+	position relative
 
-  .container
-    min-height 573px
-    height 100%
-    width 100%
-    background-size cover
-    align-items center
-    padding-top 84px
-    padding-bottom 69px
+	.container
+		min-height 573px
+		height 100%
+		width 100%
+		background-size cover
+		align-items center
+		padding-top 84px
+		padding-bottom 69px
 
-    @media $screen-sm-max
-      background-position 70% 0
+		@media $screen-sm-max
+			background-position 70% 0
 
-    @media $screen-xs-max
-      padding 84px 15px 69px
+		@media $screen-xs-max
+			padding 84px 15px 69px
 
-  &__title
-    font-size 58px
-    font-weight $weight-bold
-    color white
-    line-height 70px
-    text-align center
-    max-width 741px
-    width 100%
-    margin-top 0
+	&__title
+		font-size 58px
+		font-weight $weight-bold
+		color white
+		text-align center
+		max-width 741px
+		width 100%
+		margin-top 0
 
-    @media $screen-xs-max
-      font-size 33px
-      max-width 600px
+		@media $md-up
+			line-height 70px
 
-  &__form
-    display flex
-    flex-flow row wrap
-    justify-content space-between
-    max-width 571px
-    width 100%
+		@media $screen-xs-max
+			font-size 33px
+			max-width 600px
 
-  &__input
-    max-width 271px
-    width 100%
-    height 35px
-    font-weight $weight-regular
-    font-size 13px
-    color rgba($color-font-title ,0.80)
-    line-height 35px
-    text-align left
-    border none
-    outline none
-    padding 0 15px
-    margin-bottom 20px
+	&__form
+		display flex
+		flex-flow row wrap
+		justify-content space-between
+		max-width 571px
+		width 100%
 
-    @media $screen-xs-max
-      max-width 100%
+	&__input
+		max-width 271px
+		width 100%
+		height 35px
+		font-weight $weight-regular
+		color rgba($color-font-title ,0.80)
+		line-height 35px
+		text-align left
+		border none
+		outline none
+		padding 0 15px
+		margin-bottom 20px
+		font-size 16px
 
-  &__button
-    max-width 571px
-    width 100%
-    height 43px
-    background-color $color-bg-contact-button
-    border none
-    outline none
-    font-size 16px
-    line-height 42px
-    color white
-    transition background-color 0.2s ease-in-out
+		@media $sm-up // responsivity zoom hack (iOS 9+)
+			font-size 13px
 
-    &:hover
-      background-color rgba($color-bg-contact-button, .90)
+		@media $screen-xs-max
+			max-width 100%
 
-  &__contact-us
-    font-size 15px
-    color white
-    margin 40px 0
+	&__button
+		max-width 571px
+		width 100%
+		height 43px
+		background-color $color-bg-contact-button
+		border none
+		outline none
+		font-size 16px
+		line-height 42px
+		color white
+		transition background-color 0.2s ease-in-out
 
-  &__email
-    font-size 20px
-    text-decoration none
-    color $color-header-button
-    border-bottom solid 1px transparent
-    transition border 0.3s ease-in-out
+		&:hover
+			background-color rgba($color-bg-contact-button, .90)
 
-    &:hover
-      border-bottom solid 1px $color-header-button
+	&__contact-us
+		font-size 15px
+		color white
+		margin 40px 0 20px
 
-  &__picture
-    position absolute
-    right 0
-    bottom 0
+		@media $sm-up
+			margin 40px 0
 
-    @media screen and (max-width 87.5em)
-      display none
+	&__email
+		font-size 20px
+		text-decoration none
+		color $color-header-button
+		border-bottom solid 1px transparent
+		transition border 0.3s ease-in-out
+
+		&:hover
+			border-bottom solid 1px $color-header-button
+
+	&__picture
+		position absolute
+		right 0
+		bottom 0
+
+		@media screen and (max-width 87.5em)
+			display none
