--- a/src/frontend/views/includes/sections/about-us.jade
+++ b/src/frontend/views/includes/sections/about-us.jade
@@ -1,5 +1,5 @@
-section.about-us
-	.container(style='background-image: url(\'assets/frontend/img/about-us-cover.png\');')
+section.about-us(style='background-image: url(\'assets/frontend/img/about-us-cover.png\');')
+	.container-fluid
 		.text-block.align--center
 			h2.about-us__title.
 				O nás
