--- a/src/frontend/views/includes/sections/contact.jade
+++ b/src/frontend/views/includes/sections/contact.jade
@@ -1,10 +1,10 @@
-section.contact
-	.container(style='background-image: url(\'assets/frontend/img/contact-cover.png\');')
+section.contact(style='background-image: url(\'assets/frontend/img/contact-cover.png\');')
+	.container
 		h2.contact__title.progressiveAnim.
 			Buďme efektivní, buďme výkonní, buďme bizzi.
 		.contact__form.progressiveAnim
 			input(type='text', placeholder='Jméno a příjmení').contact__input
-			input(type='email', placeholder='tomas.stanislavsky@liffstudj').contact__input
+			input(type='email', placeholder='E-mailová adresa').contact__input
 			button(type='submit' value='submit').contact__button.
 				Chci vědět více
 		.progressiveAnim.align--center
