--- a/src/frontend/views/includes/sections/header__product.jade
+++ b/src/frontend/views/includes/sections/header__product.jade
@@ -1,20 +1,24 @@
-.header--product
-	.header__layer
-	.container(style='background-image: url(\'assets/frontend/img/header__product.png\');')
-		.header__layer
-		.header__lang-wrap
-			a(href='#').header__lang.
-				cz
-			.header__line
-			a(href='#').header__lang.active.
-				EN
-		.header__login-wrap
-			a(href='#').header__product-link.
-				produkt
-			button.header__login.
-				přihlásit
-		h1.header__title.fadeIn.
-			Dokonalé zázemí pro obchodníky
-		.header__tablet.fadeIn
-			img(src='assets/frontend/img/tablet.png', alt='tablet', width='100%', height='auto')
-		img.header__slide-up(src='assets/frontend/img/arrow.png', alt='arrow up', width='27px', height='27px')
+header.header--product(style='background-image: url(\'assets/frontend/img/header__product.png\');')
+	.container
+			.col-xs-12
+				.header__lang-wrap
+					a(href='#').header__lang.
+						cz
+					.header__line
+					a(href='#').header__lang.active.
+						EN
+				.header__wrap
+					.header__logo
+						img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
+					.header__login-wrap
+						a(href='product.html').header__product-link.
+							produkt
+						button.header__login.
+							přihlásit
+
+			.col-xs-12
+				.text-block
+					h1.header__title.fadeIn.
+						Dokonalé zázemí pro obchodníky
+				.header__tablet.fadeIn
+					img(src='assets/frontend/img/tablet.png', alt='tablet', width='100%', height='auto')
