--- a/src/frontend/views/includes/sections/overview.jade
+++ b/src/frontend/views/includes/sections/overview.jade
@@ -1,6 +1,6 @@
 section.overview
-	.overview__row.fadeInLeft
-		.overview__article
+	.overview__row
+		.overview__article.col-md-5.fadeInLeft
 			h2.overview__title.
 				PŘEHLED 360
 			.overview__text.
@@ -14,12 +14,13 @@ section.overview
 				veškerých aktivit od prvního kontaktu až po
 				poslední telefonát ve formě intuitivní časové osy.
 				To vše v uživatelsky přátelské formě.
-		.overview__pic
+		.overview__pic.fadeInRight
 				img(src='assets/frontend/img/web-design.png', alt='Web Design Temify', width='100%', height='auto')
-	.overview__row.overview__row-reverse.fadeInRight
-		.overview__pic
+
+	.overview__row.overview__row-reverse
+		.overview__pic.overview__pic--left.fadeInLeft
 				img(src='assets/frontend/img/my-tasks.png', alt='Moje úkoly', width='100%', height='auto')
-		.overview__article
+		.overview__article.col-md-5.fadeInRight
 			h2.overview__title.align--right.
 				PŘEHLED 360
 			.overview__text.align--right.
@@ -31,8 +32,9 @@ section.overview
 				cokoli, je potřeba. Fronta úkolu zároveň respektuje
 				hierarchii zadání – od firemní, pres týmovou, až po
 				tu individuální.
-	.overview__row.fadeInLeft
-		.overview__article
+
+	.overview__row
+		.overview__article.col-md-5.fadeInLeft
 			h2.overview__title.
 				PRŮVODCE SCHŮZKOU
 			.overview__text.
@@ -46,12 +48,14 @@ section.overview
 				veškerých aktivit od prvního kontaktu až po
 				poslední telefonát ve formě intuitivní časové osy.
 				To vše v uživatelsky přátelské formě.
-		.overview__pic
+		.overview__pic.fadeInRight
 				img(src='assets/frontend/img/meeting-guide.png', alt='Prúvodce schůzkou - Střední Čechy', width='100%', height='auto')
-	.overview__row.overview__row-reverse.fadeInRight
-		.overview__pic
-				img(src='assets/frontend/img/call.png', alt='call', width='100%', height='auto')
-		.overview__article
+
+
+	.overview__row.overview__row-reverse
+		.overview__pic.overview__pic--left.fadeInLeft
+			img(src='assets/frontend/img/call.png', alt='call', width='100%', height='auto')
+		.overview__article.col-md-5.fadeInRight
 			h2.overview__title.align--right.
 				PŘEHLED 360
 			.overview__text.align--right.
