Update images, add according fixes

--- a/src/frontend/views/includes/header.jade
+++ b/src/frontend/views/includes/header.jade
@@ -1,4 +1,4 @@
-header.header(style='background-image: url(\'assets/frontend/img/header-bg.png\');')
+header.header(style='background-image: url(\'assets/frontend/img/header-background.svg\');')
 	.container
 			.col-xs-12
 				.header__lang-wrap
