--- a/src/frontend/views/includes/sections/header__product.jade
+++ b/src/frontend/views/includes/sections/header__product.jade
@@ -1,5 +1,6 @@
-header.header--product(style='background-image: url(\'assets/frontend/img/header__product.png\');')
-	.container
+header.header--product
+	.container.header--container-product
+	.container.header__text
 			.col-xs-12
 				.header__lang-wrap
 					a(href='#').header__lang.
@@ -21,4 +22,4 @@ header.header--product(style='background-image: url(\'assets/frontend/img/header
 					h1.header__title.fadeIn.
 						Dokonalé zázemí pro obchodníky
 				.header__tablet.fadeIn
-					img(src='assets/frontend/img/tablet.png', alt='tablet', width='100%', height='auto')
+					img(src='assets/frontend/img/tablet.png', alt='tablet', style='width: 100%; max-width: 497px; margin: 0 auto;')
