--- a/src/frontend/views/includes/sections/contact.jade
+++ b/src/frontend/views/includes/sections/contact.jade
@@ -3,10 +3,11 @@ section.contact(style='background-image: url(\'assets/frontend/img/contact-cover
 		h2.contact__title.progressiveAnim.
 			Buďme efektivní, buďme výkonní, buďme bizzi.
 		.contact__form.progressiveAnim
-			input(type='text', placeholder='Jméno a příjmení').contact__input
-			input(type='email', placeholder='E-mailová adresa').contact__input
-			button(type='submit' value='submit').contact__button.
-				Chci vědět více
+			form(action='DAVID_SEM_PLS')
+				input(type='text', placeholder='Jméno a příjmení').contact__input
+				input(type='email', placeholder='E-mailová adresa').contact__input
+				button(type='submit' value='submit').contact__button.
+					Chci vědět více
 		.progressiveAnim.align--center
 			.contact__contact-us.
 				Nebo kontaktujte zde:
