--- a/src/frontend/views/includes/sections/header__product.jade
+++ b/src/frontend/views/includes/sections/header__product.jade
@@ -10,11 +10,12 @@ header.header--product
 						EN
 				.header__wrap
 					.header__logo
-						img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
+						a(href='/', title='bizZiapp home')
+							img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
 					.header__login-wrap
-						a(href='product.html').header__product-link.
+						a(href='/product', title='Product').header__product-link.
 							produkt
-						button.header__login.
+						a(href='http://liff.bizziapp.com/', title='Log in').header__login.
 							přihlásit
 
 			.col-xs-12
