--- a/src/frontend/css/sections/contact.styl
+++ b/src/frontend/css/sections/contact.styl
@@ -89,6 +89,7 @@
 		font-size 20px
 		text-decoration none
 		color $color-header-button
+		text-shadow 0 0 2px rgba(black, .4)
 		border-bottom solid 1px transparent
 		transition border 0.3s ease-in-out
 
