--- a/src/frontend/css/sections/progress.styl
+++ b/src/frontend/css/sections/progress.styl
@@ -10,19 +10,23 @@
 		flex-direction column
 		align-items center
 		position relative
-		margin 0 6px 25px
+		padding 0 6px
+		margin-bottom 25px
+		width 33.23%
 
-		@media $screen-xs-max
+		@media $screen-sm-max
 			max-width 400px
 			width 100%
 			margin 0 0 111px
 			padding 0 15px
 
 		@media $md-up
-			margin 0 21px 70px
+			padding 0 21px
+			margin-bottom 70px
 
 		@media $lg-up
-			margin 0 42px 111px
+			padding 0 42px
+			margin-bottom 111px
 
 		@media screen and (min-width: 1399px)
 			&:not(:last-child)::after
