--- a/src/frontend/views/includes/header.jade
+++ b/src/frontend/views/includes/header.jade
@@ -9,11 +9,12 @@ header.header(style='background-image: url(\'assets/frontend/img/header-backgrou
 						EN
 				.header__wrap
 					.header__logo
-						img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
+						a(href='/', title='bizZiapp home')
+							img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
 					.header__login-wrap
-						a(href='product.html').header__product-link.
+						a(href='/product', title='Product').header__product-link.
 							produkt
-						button.header__login.
+						a(href='http://liff.bizziapp.com/', title='Log in').header__login.
 							přihlásit
 
 			.col-xs-12.col-md-7
