--- a/src/frontend/views/includes/sections/contact.jade
+++ b/src/frontend/views/includes/sections/contact.jade
@@ -3,9 +3,10 @@ section.contact(style='background-image: url(\'assets/frontend/img/contact-cover
 		h2.contact__title.progressiveAnim.
 			Buďme efektivní, buďme výkonní, buďme bizzi.
 		.contact__form.progressiveAnim
-			form(action='DAVID_SEM_PLS')
-				input(type='text', placeholder='Jméno a příjmení').contact__input
-				input(type='email', placeholder='E-mailová adresa').contact__input
+			form(action='https://bizziapp.us17.list-manage.com/subscribe/post?u=9e52db3f58c43c9ac069d2d38&amp;id=ba8211c81f', target='_blank', method='POST', novalidate)
+				//- input(type='text', placeholder='Jméno a příjmení').contact__input
+				input(type='hidden', name='b_9e52db3f58c43c9ac069d2d38_ba8211c81f', tabindex='-1', value='').contact__input
+				input(type='email', name='EMAIL', placeholder='E-mailová adresa').contact__input
 				button(type='submit' value='submit').contact__button.
 					Chci vědět více
 		.progressiveAnim.align--center
