Update copy, links, #contact anchor, form width

--- a/src/frontend/views/includes/header.jade
+++ b/src/frontend/views/includes/header.jade
@@ -14,7 +14,7 @@ header.header(style='background-image: url(\'assets/frontend/img/header-backgrou
 					.header__login-wrap
 						a(href='/product', title='Product').header__product-link.
 							produkt
-						a(href='http://liff.bizziapp.com/', title='Log in').header__login.
+						a(href='http://demo.bizziapp.com/', title='Log in').header__login.
 							přihlásit
 
 			.col-xs-12.col-md-7
