--- a/src/frontend/views/includes/sections/progress.jade
+++ b/src/frontend/views/includes/sections/progress.jade
@@ -9,11 +9,7 @@ section.progress
 				h3.progress__title.
 					Automatizace
 				.progress__text.
-					Nedělejte nic, co za Vás může udělat stroj.
-					Naše automatizace na mnoha úrovních v
-					celém Bizziapp Vás zbaví zdlouhavých,
-					mechanických úloh. Zbyde Vám tak čas
-					na to, na čem v byznysu opravdu záleží.
+					Nedělejte nic, co za Vás může udělat stroj. Naše automatizace na mnoha úrovních v celém Bizziapp Vás zbaví zdlouhavých, mechanických úloh. Zbyde Vám tak čas na to, na čem v byznysu opravdu záleží.
 		.progress__col
 			.progress__pic.progressiveAnim
 					img(src='assets/frontend/img/customizace.png', alt='customizace', width='155px', height='153px')
@@ -23,13 +19,7 @@ section.progress
 				h3.progress__title.
 					Customizace
 				.progress__text.
-					Chápeme, že každá společnost je jiná.
-					Proto připravujeme naše CRM systémy
-					vždy přesně na míru a skutečně jen pro
-					Vás. Díky přizpůsobení individuálním
-					podmínkám, požadavkům i vytyčeným
-					cílům je Bizziapp neocenitelným
-					pracovním nástrojem.
+					Chápeme, že každá společnost je jiná. Proto připravujeme naše CRM systémy vždy přesně na míru a skutečně jen pro Vás. Díky přizpůsobení individuálním podmínkám, požadavkům i vytyčeným cílům je Bizziapp neocenitelným pracovním nástrojem.
 		.progress__col
 			.progress__pic.progressiveAnim
 					img(src='assets/frontend/img/reporting.png', alt='reporting', width='155px', height='153px')
@@ -39,9 +29,4 @@ section.progress
 				h3.progress__title.
 					Reporting
 				.progress__text.
-					Nemarněte čas tam, kde není hodnota.
-					Díky analýze efektivity a následnému
-					reportu pracujete s daty, která pro Vás
-					mají význam. Biziapp to dokáže, protože
-					je přesně přizpůsoben tomu, co je pro Vás
-					důležité.
+					Nemarněte čas tam, kde není hodnota. Díky analýze efektivity a následnému reportu pracujete s daty, která pro Vás mají význam. Biziapp to dokáže, protože je přesně přizpůsobena tomu, co je pro Vás důležité.
