--- a/src/frontend/views/includes/sections/about-us.jade
+++ b/src/frontend/views/includes/sections/about-us.jade
@@ -4,10 +4,4 @@ section.about-us(style='background-image: url(\'assets/frontend/img/about-us-cov
 			h2.about-us__title.
 				O nás
 			.about-us__article.
-				Už od samého počátku vývoje jsme se snažili o to, aby Bizziapp dokázal ovládat kdokoli a zároveň v něm
-				každý našel přesně to, co potřebuje. Na první pohled to vypadá jako paradox – a právě takové výzvy
-				vyhledáváme. Bizziapp funguje tak trochu jako stavebnice. Řeknete si, co chcete postavit a my Vám
-				dodáme ty správné kostičky. A návod? Ten nebude potřeba. Vše je zcela intuitivní a vždy po ruce. Nový
-				kontakt rovnou připojíte ke společnosti. Je třeba kontakt oslovit? Jedním kliknutím jste v úkolech,
-				druhým kliknutím již vytváříte obchod a třetím sdílíte mezi další uživatele aplikace. Detailní report na
-				Vás pak čeká sám. Vše je navzájem propojeno. Ty nejlepší řešení totiž bývají ty nejjednodušší.
+				 Bizzapp je komplexní obchodní CRM nástroj, kde budete mít všechny obchodní příležitosti uvnitř Vaší společnsoti jako na dlani. Detailní přehled a řízení veškerých obchodních příležitostí od prvního kontaktu - až po úspěšné uzavření obchodu, to je to, co dělá z Bizzapp zásadního partnera pro maximální růst vašich týmů a tím i celé společnosti. Jednoduše a přitom efektivně.
