--- a/src/frontend/views/includes/sections/header__product.jade
+++ b/src/frontend/views/includes/sections/header__product.jade
@@ -15,7 +15,7 @@ header.header--product
 					.header__login-wrap
 						a(href='/product', title='Product').header__product-link.
 							produkt
-						a(href='http://liff.bizziapp.com/', title='Log in').header__login.
+						a(href='http://demo.bizziapp.com/', title='Log in').header__login.
 							přihlásit
 
 			.col-xs-12
