--- a/src/frontend/views/includes/sections/overview.jade
+++ b/src/frontend/views/includes/sections/overview.jade
@@ -22,32 +22,17 @@ section.overview
 				img(src='assets/frontend/img/my-tasks.png', alt='Moje úkoly', width='100%', height='auto')
 		.overview__article.col-md-5.fadeInRight
 			h2.overview__title.align--right.
-				PŘEHLED 360
+				TEMPO ÚKOLŮ
 			.overview__text.align--right.
-				Naše fronty jsou inteligentní. Přizpůsobíme nebo
-				je doporučíme na míru dle tempa Vaší
-				společnosti, aby ste díky automatizaci získali
-				maximum. Ke každému úkolu lze přiřadit nejen
-				podúkoly, soubory nebo komentáře, ale proste
-				cokoli, je potřeba. Fronta úkolu zároveň respektuje
-				hierarchii zadání – od firemní, pres týmovou, až po
-				tu individuální.
+				Naše fronty jsou inteligentní. Přizpůsobíme nebo je doporučíme na míru dle tempa Vaší společnosti, aby ste díky automatizaci získali maximum. Ke každému úkolu lze přiřadit nejen podúkoly, soubory nebo komentáře, ale proste cokoli, je potřeba. Fronta úkolu zároveň respektuje hierarchii zadání – od firemní, pres týmovou, až po tu individuální.
+
 
 	.overview__row
 		.overview__article.col-md-5.fadeInLeft
 			h2.overview__title.
 				PRŮVODCE SCHŮZKOU
 			.overview__text.
-				Se sofistikovanou 360kou – detailním přehledem
-				klienta, společnosti a obchodu, máte veškeré
-				informace uloženy srozumitelně, kompaktně a
-				vždy po ruce. Vše od úkolu, schůzek či fází
-				obchodu až po přiložené soubory a smlouvy
-				přehledné na jednom místě. Celá karta poté
-				nabízí i možnost chronologického seřazení
-				veškerých aktivit od prvního kontaktu až po
-				poslední telefonát ve formě intuitivní časové osy.
-				To vše v uživatelsky přátelské formě.
+				Se sofistikovanou 360kou – detailním přehledem klienta, společnosti a obchodu, máte veškeré informace uloženy srozumitelně, kompaktně a vždy po ruce. Vše od úkolu, schůzek či fází obchodu až po přiložené soubory a smlouvy přehledné na jednom místě. Celá karta poté nabízí i možnost chronologického seřazení veškerých aktivit od prvního kontaktu až po poslední telefonát ve formě intuitivní časové osy. To vše v uživatelsky přátelské formě.
 		.overview__pic.fadeInRight
 				img(src='assets/frontend/img/meeting-guide.png', alt='Prúvodce schůzkou - Střední Čechy', width='100%', height='auto')
 
@@ -57,13 +42,7 @@ section.overview
 			img(src='assets/frontend/img/call.png', alt='call', width='100%', height='auto')
 		.overview__article.col-md-5.fadeInRight
 			h2.overview__title.align--right.
-				PŘEHLED 360
+				BIZZI CALL
 			.overview__text.align--right.
-				Naše fronty jsou inteligentní. Přizpůsobíme nebo
-				je doporučíme na míru dle tempa Vaší
-				společnosti, aby ste díky automatizaci získali
-				maximum. Ke každému úkolu lze přiřadit nejen
-				podúkoly, soubory nebo komentáře, ale proste
-				cokoli, je potřeba. Fronta úkolu zároveň respektuje
-				hierarchii zadání – od firemní, pres týmovou, až po
-				tu individuální.
+				Naše fronty jsou inteligentní. Přizpůsobíme nebo je doporučíme na míru dle tempa Vaší společnosti, aby ste díky automatizaci získali maximum. Ke každému úkolu lze přiřadit nejen podúkoly, soubory nebo komentáře, ale proste cokoli, je potřeba. Fronta úkolu zároveň respektuje hierarchii zadání – od firemní, pres týmovou, až po tu individuální.
+
