hotfix product link url, add #footer anchor

--- a/src/frontend/views/includes/sections/header__product.jade
+++ b/src/frontend/views/includes/sections/header__product.jade
@@ -13,7 +13,7 @@ header.header--product
 						a(href='/', title='bizZiapp home')
 							img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
 					.header__login-wrap
-						a(href='/product', title='Product').header__product-link.
+						a(href='/product.html', title='Product').header__product-link.
 							produkt
 						a(href='http://demo.bizziapp.com/', title='Log in').header__login.
 							přihlásit
