--- a/src/frontend/views/includes/footer.jade
+++ b/src/frontend/views/includes/footer.jade
@@ -4,7 +4,7 @@ footer.footer#footer
 			.footer__col.col-xs-12.col-sm-4.col-md-3
 				.footer__logo
 					img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
-				a(href='#').footer__link.
+				a(href='/terms-cz.pdf').footer__link.
 					Terms and Conditions
 			.footer__col.col-xs-12.col-sm-4.col-md-3
 				a(href='mailto:bizziapp@temify.com').footer__link.
