English lang setup

--- a/src/frontend/css/components/header.styl
+++ b/src/frontend/css/components/header.styl
@@ -85,8 +85,7 @@
 			align-items center
 
 	&__lang-wrap
-		//display flex
-		display none
+		display flex
 		justify-content flex-end
 		align-items baseline
 		margin-top 14px
@@ -106,6 +105,7 @@
 		&.active
 			font-weight $weight-regular
 			font-size 15px
+			text-transform uppercase
 
 	&__line
 		height 12px
