--- a/src/frontend/views/includes/sections/about-us.pug
+++ b/src/frontend/views/includes/sections/about-us.pug
@@ -2,6 +2,6 @@ section.about-us(style='background-image: url(\'assets/frontend/img/about-us-cov
 	.container-fluid
 		.text-block.align--center
 			h2.about-us__title.
-				O nás
+				#{lang.about.title}
 			.about-us__article.
-				 Bizzapp je komplexní obchodní CRM nástroj, kde budete mít všechny obchodní příležitosti uvnitř Vaší společnsoti jako na dlani. Detailní přehled a řízení veškerých obchodních příležitostí od prvního kontaktu - až po úspěšné uzavření obchodu, to je to, co dělá z Bizzapp zásadního partnera pro maximální růst vašich týmů a tím i celé společnosti. Jednoduše a přitom efektivně.
+				#{lang.about.article}
