--- a/src/frontend/views/includes/sections/contact.pug
+++ b/src/frontend/views/includes/sections/contact.pug
@@ -1,17 +1,16 @@
 section.contact(style='background-image: url(\'assets/frontend/img/contact-cover.png\');')#contact
 	.container
 		h2.contact__title.progressiveAnim.
-			Buďme efektivní, buďme výkonní, buďme bizzi.
+			#{lang.contact.title}
 		.contact__form.progressiveAnim
 			form(action='https://bizziapp.us17.list-manage.com/subscribe/post?u=9e52db3f58c43c9ac069d2d38&amp;id=ba8211c81f', target='_blank', method='POST', novalidate).contact__form
-				//- input(type='text', placeholder='Jméno a příjmení').contact__input
 				input(type='hidden', name='b_9e52db3f58c43c9ac069d2d38_ba8211c81f', tabindex='-1', value='').contact__input
-				input(type='email', name='EMAIL', placeholder='E-mailová adresa').contact__input
+				input(type='email', name='EMAIL', placeholder=lang.contact.emailPlaceholder).contact__input
 				button(type='submit' value='submit').contact__button.
-					Chci vědět více
+					#{lang.contact.submit}
 		.progressiveAnim.align--center
 			.contact__contact-us.
-				Nebo kontaktujte zde:
+				#{lang.contact.otherMeans}
 			a(href='mailto:bizziapp@temify.com').contact__email.
 				bizziapp@temify.com
 		img(src='assets/frontend/img/person.png', alt='person', width='449px', height='469px').contact__picture.fadeInRight
