--- a/src/frontend/views/includes/footer.pug
+++ b/src/frontend/views/includes/footer.pug
@@ -3,9 +3,9 @@ footer.footer#footer
 		.row
 			.footer__col.col-xs-12.col-sm-4.col-md-3
 				.footer__logo
-					img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
-				a(href='/terms-cz.pdf').footer__link
-					lang.footer.terms
+					img(src='assets/frontend/img/logo.svg', alt='logo', width='113px', height='28px')
+				a(href='/terms-cz.pdf').footer__link.
+					#{lang.footer.terms}
 			.footer__col.col-xs-12.col-sm-4.col-md-3
 				a(href='mailto:bizziapp@temify.com').footer__link.
 					E-mail: bizziapp@temify.com<br>
