--- a/src/frontend/views/includes/header.pug
+++ b/src/frontend/views/includes/header.pug
@@ -2,30 +2,32 @@ header.header(style='background-image: url(\'assets/frontend/img/header-backgrou
 	.container
 		.col-xs-12
 			.header__lang-wrap
-				a(href='#').header__lang.
+				- var czechActive = lang.language === 'cz' ? 'active' : ''
+				a(href='#', class="header__lang " + czechActive).
 					cz
 				.header__line
-				a(href='#').header__lang.active.
-					EN
+				- var englishActive = lang.language === 'en' ? 'active' : ''
+				a(href='#', class="header__lang " + englishActive).
+					en
 			.header__wrap
 				.header__logo
 					a(href='/', title='bizZiapp home')
-						img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
+						img(src='assets/frontend/img/logo.svg', alt='logo', width='113px', height='28px')
 				.header__login-wrap
 					a(href='/product.html', title='Product').header__product-link.
-						produkt
+						#{lang.header.linkProduct}
 					a(href='http://demo.bizziapp.com/', title='Log in').header__login.
-						přihlásit
+						#{lang.header.linkLogin}
 
 		.col-xs-12.col-md-7
 			.text-block
 				h1.header__title.
-					Dokonalé zázemí pro obchodníky
+					#{lang.header.title}
 				.header__description.
-					Firemní nástroj pro sledování týmové práce a budování vztahů s vašimi klienty.
+					#{lang.header.description}
 				.header__subscription
 					form(action='https://bizziapp.us17.list-manage.com/subscribe/post?u=9e52db3f58c43c9ac069d2d38&amp;id=ba8211c81f', target='_blank', method='POST', novalidate)
 						input(placeholder='E-mail', name='EMAIL', type='email').header__email
 						input(type='hidden', name='b_9e52db3f58c43c9ac069d2d38_ba8211c81f', tabindex='-1', value='')
 						button(type='submit' value='submit').header__send.
-							Odeslat
+							#{lang.header.submitForm}
