--- a/src/frontend/views/includes/sections/overview.pug
+++ b/src/frontend/views/includes/sections/overview.pug
@@ -2,47 +2,38 @@ section.overview
 	.overview__row
 		.overview__article.col-md-5.fadeInLeft
 			h2.overview__title.
-				PŘEHLED 360
+				#{lang.overview.article1.title}
 			.overview__text.
-				Se sofistikovanou 360kou – detailním přehledem
-				klienta, společnosti a obchodu, máte veškeré
-				informace uloženy srozumitelně, kompaktně a
-				vždy po ruce. Vše od úkolu, schůzek či fází
-				obchodu až po přiložené soubory a smlouvy
-				přehledné na jednom místě. Celá karta poté
-				nabízí i možnost chronologického seřazení
-				veškerých aktivit od prvního kontaktu až po
-				poslední telefonát ve formě intuitivní časové osy.
-				To vše v uživatelsky přátelské formě.
+				#{lang.overview.article1.text}
 		.overview__pic.fadeInRight
-				img(src='assets/frontend/img/web-design.png', alt='Web Design Temify', width='100%', height='auto')
+				img(src='assets/frontend/img/web-design.png', alt=lang.overview.article1.imageAlt, width='100%', height='auto')
 
 	.overview__row.overview__row-reverse
 		.overview__pic.overview__pic--left.fadeInLeft
-				img(src='assets/frontend/img/my-tasks.png', alt='Moje úkoly', width='100%', height='auto')
+				img(src='assets/frontend/img/my-tasks.png', alt=lang.overview.article2.imageAlt, width='100%', height='auto')
 		.overview__article.col-md-5.fadeInRight
 			h2.overview__title.align--right.
-				TEMPO ÚKOLŮ
+				#{lang.overview.article2.title}
 			.overview__text.align--right.
-				Naše fronty jsou inteligentní. Přizpůsobíme nebo je doporučíme na míru dle tempa Vaší společnosti, aby ste díky automatizaci získali maximum. Ke každému úkolu lze přiřadit nejen podúkoly, soubory nebo komentáře, ale proste cokoli, je potřeba. Fronta úkolu zároveň respektuje hierarchii zadání – od firemní, pres týmovou, až po tu individuální.
+				#{lang.overview.article2.text}
 
 
 	.overview__row
 		.overview__article.col-md-5.fadeInLeft
 			h2.overview__title.
-				PRŮVODCE SCHŮZKOU
+				#{lang.overview.article3.title}
 			.overview__text.
-				Se sofistikovanou 360kou – detailním přehledem klienta, společnosti a obchodu, máte veškeré informace uloženy srozumitelně, kompaktně a vždy po ruce. Vše od úkolu, schůzek či fází obchodu až po přiložené soubory a smlouvy přehledné na jednom místě. Celá karta poté nabízí i možnost chronologického seřazení veškerých aktivit od prvního kontaktu až po poslední telefonát ve formě intuitivní časové osy. To vše v uživatelsky přátelské formě.
+				#{lang.overview.article3.text}
 		.overview__pic.fadeInRight
-				img(src='assets/frontend/img/meeting-guide.png', alt='Prúvodce schůzkou - Střední Čechy', width='100%', height='auto')
+				img(src='assets/frontend/img/meeting-guide.png', alt=lang.overview.article3.imageAlt, width='100%', height='auto')
 
 
 	.overview__row.overview__row-reverse
 		.overview__pic.overview__pic--left.fadeInLeft
-			img(src='assets/frontend/img/call.png', alt='call', width='100%', height='auto')
+			img(src='assets/frontend/img/call.png', alt=lang.overview.article4.imageAlt, width='100%', height='auto')
 		.overview__article.col-md-5.fadeInRight
 			h2.overview__title.align--right.
-				BIZZI CALL
+				#{lang.overview.article4.title}
 			.overview__text.align--right.
-				Naše fronty jsou inteligentní. Přizpůsobíme nebo je doporučíme na míru dle tempa Vaší společnosti, aby ste díky automatizaci získali maximum. Ke každému úkolu lze přiřadit nejen podúkoly, soubory nebo komentáře, ale proste cokoli, je potřeba. Fronta úkolu zároveň respektuje hierarchii zadání – od firemní, pres týmovou, až po tu individuální.
+				#{lang.overview.article4.text}
 
