Fix og tags, uppercases

--- a/src/frontend/views/includes/head.pug
+++ b/src/frontend/views/includes/head.pug
@@ -12,8 +12,8 @@ head
 	link(rel='stylesheet', href='assets/frontend/css/main.css')
 
 	// SEO, Open graph
-	meta(property='og:description', content='#{lang.head.description}')
-	meta(property='og:title', content='#{lang.head.title}')
+	meta(property='og:description', content=lang.head.description)
+	meta(property='og:title', content=lang.head.title)
 	meta(property='og:site_name', content='Bizzi')
-	meta(property='og:locale', content='#{lang.head.locale}')
+	meta(property='og:locale', content=lang.head.locale)
 	meta(property='og:type', content='website')
