--- a/src/frontend/views/includes/head.pug
+++ b/src/frontend/views/includes/head.pug
@@ -8,12 +8,16 @@ head
 	meta(name='viewport', content='width=device-width, user-scalable=yes, minimum-scale=1.0, maximum-scale=1.5')
 	meta(charset='utf-8')
 
+	// Favicon (unnecessary)
+	link(rel='icon', href='favicon.png')
+
 	// CSS file
 	link(rel='stylesheet', href='assets/frontend/css/main.css')
 
 	// SEO, Open graph
 	meta(property='og:description', content=lang.head.description)
 	meta(property='og:title', content=lang.head.title)
+	meta(property='og:image', content='http://bizzi.scrollorslide.com/og.png')
 	meta(property='og:site_name', content='Bizzi')
 	meta(property='og:locale', content=lang.head.locale)
 	meta(property='og:type', content='website')
