Update page title and og image

--- a/src/frontend/views/includes/head.pug
+++ b/src/frontend/views/includes/head.pug
@@ -3,8 +3,8 @@ head
 	title= lang.head.pageTitle
 
 	// Basic meta tags
-	meta(name='mobile-web-app-title', content='Bizzi')
-	meta(name='application-name', content='Bizzi')
+	meta(name='mobile-web-app-title', content='BizziApp')
+	meta(name='application-name', content='BizziApp')
 	meta(name='viewport', content='width=device-width, user-scalable=yes, minimum-scale=1.0, maximum-scale=1.5')
 	meta(charset='utf-8')
 
@@ -17,7 +17,7 @@ head
 	// SEO, Open graph
 	meta(property='og:description', content=lang.head.description)
 	meta(property='og:title', content=lang.head.title)
-	meta(property='og:image', content='http://bizzi.scrollorslide.com/og.png')
+	meta(property='og:image', content='https://bizziapp.com/og.png')
 	meta(property='og:site_name', content='Bizzi')
 	meta(property='og:locale', content=lang.head.locale)
 	meta(property='og:type', content='website')
