Add html link to product

--- a/src/frontend/views/includes/sections/header__product.pug
+++ b/src/frontend/views/includes/sections/header__product.pug
@@ -4,11 +4,11 @@ header.header--product
 			.col-xs-12
 				.header__lang-wrap
 					- var czechActive = lang.language === 'cz' ? 'active' : ''
-					a(href='product', class="header__lang " + czechActive).
+					a(href='index.html', class="header__lang " + czechActive).
 						cz
 					.header__line
 					- var englishActive = lang.language === 'en' ? 'active' : ''
-					a(href='product-en', class="header__lang " + englishActive).
+					a(href='en.html', class="header__lang " + englishActive).
 						en
 				.header__wrap
 					.header__logo
